# double-description-method

./: CMakeLists.txt  Multithreaded Programming (POSIX pthreads Tutorial).html  README.md  array_in.c  array_in_multi.c  inter_initial_basis.c  lexmin.c  main.c  main_no_active_point.c  multi_mutex.c  multi_practice_1.c  multi_practice_mutex.c  random_initial.c  random_initial01矩阵整数除以整数的教训.c  random_initial_2.c  rank_only.c  rank_only_NC2.c  rank_only_NC2_r_pos.c  rank_only_NC2_r_pos_debug_data_type.c  tell_me_array_dim.c  teset_argv.c  test_rank_fuck.c  trun.c  useful_function.h  useful_function_2.h
